# HeatTransfer

./: CMakeLists.txt  heat2D.cpp  heat2D.py  heat2D_MPI_parallel.py  heat2D_numpy_vectorized.py
